05-Terraform-Loops-MetaArguments-SplatOperator/01/c5-ec2instance.tf
# EC2 instance

resource "aws_instance" "mysec2vm" {
    ami = data.aws_ami.amzlinux2.id

    #instance_type=var.instance_type_list[1]
    instance_type = var.instance_type
    #instance_type = var.instance_type_map["prod"]
    user_data = file("${path.module}/app1-install.sh")
    key_name = var.instance_keypair
    vpc_security_group_ids = [aws_security_group.vpc-ssh.id, aws_security_group.vpc-web.id]
    count = 2
    tags={
        "Name"="Count-demo-${count.index}"
    }
  

}
